[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"
authors = ["Dima Lazarev <dmitry.lazarev@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
aoc-parse = "0.2.18"
num = "0.4"
z3 = {version="0.12", features = ["static-link-z3"]}
rand = "0.8.5"